--- a/css/main.css
+++ b/css/main.css
@@ -65,12 +65,12 @@
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888; 
+    background: rgb(0, 0, 0); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: rgba(0, 0, 0, 0.562); 
 }
 /* hasta aqui el scroll */
 
@@ -80,8 +80,15 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.24);
-    color: rgb(255, 255, 255);
+    color: black;
+  
+   height: 32px;
     text-align: center;
+}
+.redes a{
+  
+  margin-left: 20px;
+ 
+ 
 }
 /* el footer termina aqui */
